k8s/ingress/strip-prefix-middleware-assistant.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-assistant
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /assistant
